Code quality fixing for UserService FetchAllUsers method implementation